# genisis---ASME-SDC-25-26

./: CMakeLists.txt  README.md  build.ps1
src/: controller_state.c  controller_state.h  main.c
src/controller/: bluepad32_platform.c  controller_state.c  controller_state.h
src/motor/: motor.cpp  motor.h
src/robot/: robot.cpp  robot.h
src/servo/: servo.cpp  servo.h
src/tests/: test_controller_motor.cpp  test_controller_motor.h  test_esc_controller.cpp  test_esc_controller.h  test_input.cpp  test_input.h  test_motor.cpp
src/tests/integrated/: input_monitor.cpp  input_monitor.h  motor_test.cpp  motor_test.h
src/tests/standalone/: blink_serial.cpp  motor_ramp.cpp
